vertical overflow fix

--- a/src/index.scss
+++ b/src/index.scss
@@ -28,7 +28,7 @@ html{
     overflow-x: hidden;
     font-size: 1.7rem !important;
     height: 100vh;
-    
+    overflow: hidden;
   }
   
   code {
